@@ -587,9 +587,10 @@ int SmscConnector::send( Task& task, Message& msg )
 
             if (info.useUssdPush) {
                 try {
-                    sms.setIntProperty(Tag::SMPP_USSD_SERVICE_OP,smsc::smpp::UssdServiceOpValue::USSN_REQUEST);
+                    sms.setIntProperty(Tag::SMPP_USSD_SERVICE_OP,
+                                       smsc::sms::USSD_USSN_REQ_LAST);
                 } catch (...) {
-                    smsc_log_error(log_,"ussdpush: cannot set USSN_REQ");
+                    smsc_log_error(log_,"ussdpush: cannot set USSN_REQ_LAST");
                     msguard.failed(smsc::system::Status::SYSERR);
                     return 0;
                 }
